<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
   >

    <item
        android:id="@+id/action_stop"
        android:icon="@drawable/ic_action_stop"
          android:orderInCategory="1"
        android:title="@string/action_stop_title"
         app:showAsAction="always"
        android:visible="false"/>    
    
    <item
        android:id="@+id/action_pause"
        android:icon="@drawable/ic_action_pause"
        android:orderInCategory="2"
        android:title="@string/action_start"
        app:showAsAction="always"
        android:visible="false"/>
        <item
        android:id="@+id/action_start"
        android:icon="@drawable/ic_action_play"
        android:orderInCategory="1"
        android:title="@string/action_start"
        app:showAsAction="always"/>
         <item
        android:id="@+id/action_setDemodulation"
        android:icon="@drawable/ic_action_demod_off"
        android:orderInCategory="4"
        android:title="@string/action_demodulation_off"
        app:showAsAction="always"/>
  
    <item
        android:id="@+id/action_record"
        android:icon="@drawable/ic_action_record_off"
        android:orderInCategory="5"
        android:title="@string/action_recordOff"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="6"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="always"/>
          <item
        android:id="@+id/action_setGain"
        android:icon="@drawable/ic_action_gain"
        android:orderInCategory="8"
        android:title="@string/action_setGain"
        app:showAsAction="ifRoom"/>
     <item
        android:id="@+id/action_setFrequency"
        android:icon="@drawable/ic_action_frequency"
        android:orderInCategory="9"
        android:title="@string/action_setFrequency"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="101"
        android:title="@string/action_help"
        app:showAsAction="never"/>

</menu>