<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/morseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/defaultHighMargin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/morseStateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morse_state"
                android:visibility="visible" />

            <TextView
                android:id="@+id/morseStateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morse_state_user_input"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/morseSymbolSuccessRateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morse_symbol_success_rate"
                android:visibility="visible" />

            <TextView
                android:id="@+id/morseSymbolSuccessRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/morseCodeSuccessLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morse_code_success_rate"
                android:visibility="visible" />

            <TextView
                android:id="@+id/morseCodeSuccessRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/morseEstimatedDitDurationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morse_estimated_dit_duration_label"
                android:visibility="visible" />

            <TextView
                android:id="@+id/morseEstimatedDitDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/morseThresholdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morse_estimated_threshold_label"
                android:visibility="visible" />

            <TextView
                android:id="@+id/morseThreshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

                  <Button
                      android:id="@+id/morseInitButton"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="3"
                      android:drawableTop="@android:drawable/ic_menu_revert"
                      android:text="@string/morse_init_button" />

</LinearLayout>